moved everything around

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     />
     <title>Dan Haggerty</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="static/favicon.png" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
