Moved some things around

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Dan Haggerty</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="static/favicon.png" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,10 +34,9 @@
         </div>
         <nav class="full-nav">
           <ul class="link-list mono">
-            <li><a href="#home">Home</a></li>
             <li><a href="#contact">Contact</a></li>
             <li>
-              <a class="button" href="static/resume.pdf" target="_blank">Resume</a>
+              <a class="button" href="resume.pdf" target="_blank">Resume</a>
             </li>
           </ul>
         </nav>
@@ -109,7 +108,7 @@
           <li><a href="#home" class="nav-menu-link">Home</a></li>
           <li><a href="#contact" class="nav-menu-link">Contact</a></li>
           <li>
-            <a class="button nav-menu-link" href="static/resume.pdf" target="_blank"
+            <a class="button nav-menu-link" href="resume.pdf" target="_blank"
               >Resume</a
             >
           </li>
@@ -137,7 +136,7 @@
           <div class="profile-photo-container">
             <div class="profile-photo">
               <img
-                src="static/profile-pic.jpg"
+                src="images/profile-pic.jpg"
                 alt="Dan Haggerty smiling wearing sunglasses"
                 loading="lazy"
               />
@@ -152,7 +151,7 @@
             <li>
               <div class="job-container">
                 <div class="job-image-container">
-                  <img src="static/nvidia-logo.png" alt="NVIDIA logo" />
+                  <img src="images/nvidia-logo.png" alt="NVIDIA logo" />
                 </div>
                 <div class="job-text-container">
                   <h2>NVIDIA</h2>
@@ -213,7 +212,7 @@
             <li>
               <div class="job-container">
                 <div class="job-image-container">
-                  <img src="static/larry.png" alt="Twitter logo" />
+                  <img src="images/larry.png" alt="Twitter logo" />
                 </div>
                 <div class="job-text-container">
                   <h2>Twitter</h2>
@@ -277,7 +276,7 @@
             <li>
               <div class="job-container">
                 <div class="job-image-container">
-                  <img src="static/google-logo.png" alt="Google logo" />
+                  <img src="images/google-logo.png" alt="Google logo" />
                 </div>
                 <div class="job-text-container">
                   <h2>Google</h2>
@@ -341,7 +340,7 @@
             <li>
               <div class="job-container">
                 <div class="job-image-container">
-                  <img src="static/vmware-logo.png" alt="VMware logo" />
+                  <img src="images/vmware-logo.png" alt="VMware logo" />
                 </div>
                 <div class="job-text-container">
                   <h2>VMware</h2>
@@ -405,7 +404,7 @@
               <div class="job-container">
                 <div class="job-image-container">
                   <img
-                    src="static/altatec-logo-full.png"
+                    src="images/altatec-logo-full.png"
                     alt="AltaTec logo"
                   />
                 </div>
@@ -472,12 +471,12 @@
               <div class="job-container">
                 <div class="job-image-container">
                   <img
-                    src="static/ion-logo.png"
+                    src="images/ion-logo.png"
                     alt="ION Geophysical logo"
                     class="ion-logo-light"
                   />
                   <img
-                    src="static/ion-logo-dark.png"
+                    src="images/ion-logo-dark.png"
                     alt="ION Geophysical logo"
                     class="ion-logo-dark"
                     style="display: none"
@@ -545,12 +544,12 @@
               <div class="job-container">
                 <div class="job-image-container">
                   <img
-                    src="static/dornerworks-logo.png"
+                    src="images/dornerworks-logo.png"
                     alt="DornerWorks logo"
                     class="dornerworks-logo-light"
                   />
                   <img
-                    src="static/dornerworks-logo-dark.png"
+                    src="images/dornerworks-logo-dark.png"
                     alt="DornerWorks logo"
                     class="dornerworks-logo-dark"
                     style="display: none"
@@ -637,7 +636,7 @@
                 target="_blank"
                 href="https://www.github.com/haggs"
                 rel="noreferrer"
-                >Github</a
+                >GitHub</a
               >
             </li>
             <li>
@@ -667,7 +666,7 @@
               href="https://github.com/haggs/personal-website"
               target="_blank"
               rel="noreferrer"
-              >Github</a
+              >GitHub</a
             >. <br />© <span id="current-year"></span> Dan Haggerty
           </p>
         </section>
