--- a/index.html
+++ b/index.html
@@ -121,16 +121,30 @@
             <h1 class="title">Dan Haggerty</h1>
             <h2>Full stack developer based in Detroit, Michigan.</h2>
             <p>
-              Hey, I'm Dan. I'm a full-stack developer, home improvement
-              enthusiast, and new hire at NVIDIA working on UI for LLM apps. I
-              recently resigned from Twitter where I worked on content
-              moderation tools. I specialize in React, Typescript, and just
-              generally building polished UIs. Aside from all that, I'm usually
-              working on my house or out on the lake.
+              Hello, world. I'm Dan. Software developer, home improvement
+              enthusiast, and new father. I'm currently working at
+              <a href="https://www.nvidia.com/" target="_blank" rel="noreferrer"
+                >NVIDIA</a
+              >
+              on novel UIs for customizing LLMs and agents. Previously, I worked at
+              <a href="https://www.x.com/" target="_blank" rel="noreferrer"
+                >Twitter</a
+              >
+              on content moderation, at
+              <a href="https://www.google.com" target="_blank" rel="noreferrer"
+                >Google</a
+              >
+              on
+              <a
+                href="https://www.youtube.com/watch?v=FBWvXZP_frg"
+                target="_blank"
+                rel="noreferrer"
+                >Live Case</a
+              >, and at a consulting firm I co-owned in Guayaquil, Ecuador.
             </p>
             <p>
               I'm <strong>not looking for work</strong> right now, but feel free
-              to <a href="#contact" class="link-accent">contact me</a> anyways.
+              to <a href="#contact" class="link-accent">reach out</a> anyways.
             </p>
           </div>
           <div class="profile-photo-container">
@@ -138,8 +152,7 @@
               <img
                 src="images/profile-pic.jpg"
                 alt="Dan Haggerty smiling wearing sunglasses"
-                loading="lazy"
-              />
+              /> 
             </div>
           </div>
         </section>
@@ -155,7 +168,7 @@
                 </div>
                 <div class="job-text-container">
                   <h2>NVIDIA</h2>
-                  <h3>Full Stack Software Engineer, NeMo LLM Service</h3>
+                  <h3>Full Stack Software Engineer, AI Research Engineering</h3>
                   <p>
                     <svg
                       class="icon-accent"
@@ -202,7 +215,10 @@
                     Detroit, Michigan (Remote)
                   </p>
                   <ul class="job-description">
-                    <li>Developed UI features for NeMo LLM Service using Next.JS and Typescript</li>
+                    <li>
+                      Developed experimental LLM development tools using React,
+                      Typescript, and Python.
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -263,10 +279,24 @@
                     San Francisco, California -> Detroit, Michigan (Remote)
                   </p>
                   <ul class="job-description">
-                    <li>Developed internal tools for improving the safety of Twitter users using React, Typescript, and Scala</li>
-                    <li>Turned requirements into web applications used by thousands of agents working in areas of abuse, spam, child safety, hate speech, copyright, law enforcement requests, and many more domains</li>
-                    <li>Designed tool features for improving the mental well-being of agents exposed to harmful content</li>
-                    <li>Owned a React UI component library used by multiple teams to speed up the development of features</li>
+                    <li>
+                      Developed internal tools for improving the safety of
+                      Twitter users using React, Typescript, and Scala
+                    </li>
+                    <li>
+                      Turned requirements into web applications used by
+                      thousands of agents working in areas of abuse, spam, child
+                      safety, hate speech, copyright, law enforcement requests,
+                      and many more domains
+                    </li>
+                    <li>
+                      Designed tool features for improving the mental well-being
+                      of agents exposed to harmful content
+                    </li>
+                    <li>
+                      Owned a React UI component library used by multiple teams
+                      to speed up the development of features
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -327,10 +357,22 @@
                     Mountain View, California
                   </p>
                   <ul class="job-description">
-                    <li>Developed code for the Live Case customization platform using Google Cloud Platform and App Engine</li>
-                    <li>Implemented a new UI using AngularJS and ES6, increasing purchase conversion rate by 30%</li>
-                    <li>Designed an image moderation service built on computer vision and machine learning APIs</li>
-                    <li>Added integrations with multiple vendor systems through a RESTful web API</li>
+                    <li>
+                      Developed code for the Live Case customization platform
+                      using Google Cloud Platform and App Engine
+                    </li>
+                    <li>
+                      Implemented a new UI using AngularJS and ES6, increasing
+                      purchase conversion rate by 30%
+                    </li>
+                    <li>
+                      Designed an image moderation service built on computer
+                      vision and machine learning APIs
+                    </li>
+                    <li>
+                      Added integrations with multiple vendor systems through a
+                      RESTful web API
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -391,9 +433,19 @@
                     Palo Alto, California
                   </p>
                   <ul class="job-description">
-                    <li>Developed new features, worked with stakeholders to improve a new release management web application built in Django and AngularJs</li>
-                    <li>Refactored the web app's frontend and implemented a Javascript framework using AngularJS</li>
-                    <li>Integrated app with Confluence and other internal web applications through a RESTful API</li>
+                    <li>
+                      Developed new features, worked with stakeholders to
+                      improve a new release management web application built in
+                      Django and AngularJs
+                    </li>
+                    <li>
+                      Refactored the web app's frontend and implemented a
+                      Javascript framework using AngularJS
+                    </li>
+                    <li>
+                      Integrated app with Confluence and other internal web
+                      applications through a RESTful API
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -403,10 +455,7 @@
             <li>
               <div class="job-container">
                 <div class="job-image-container">
-                  <img
-                    src="images/altatec-logo-full.png"
-                    alt="AltaTec logo"
-                  />
+                  <img src="images/altatec-logo-full.png" alt="AltaTec logo" />
                 </div>
                 <div class="job-text-container">
                   <h2>AltaTec</h2>
@@ -457,10 +506,22 @@
                     Guayaquil, Ecuador
                   </p>
                   <ul class="job-description">
-                    <li>Developed custom ERP software implementations using Python and the Odoo ERP platform</li>
-                    <li>Created an automatic backup process of PostgreSQL databases using Python and Amazon S3</li>
-                    <li>Supervised the deployment and maintenance of 12 cloud systems using Amazon Web Services</li>
-                    <li>Managed and trained a team of 4 software engineers to deliver fast client solutions</li>
+                    <li>
+                      Developed custom ERP software implementations using Python
+                      and the Odoo ERP platform
+                    </li>
+                    <li>
+                      Created an automatic backup process of PostgreSQL
+                      databases using Python and Amazon S3
+                    </li>
+                    <li>
+                      Supervised the deployment and maintenance of 12 cloud
+                      systems using Amazon Web Services
+                    </li>
+                    <li>
+                      Managed and trained a team of 4 software engineers to
+                      deliver fast client solutions
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -531,9 +592,18 @@
                     Houston, Texas
                   </p>
                   <ul class="job-description">
-                    <li>Developed code for a high-performance, parallel seismic data processing system in C++</li>
-                    <li>Designed and implemented various geophysical data processing modules</li>
-                    <li>Improved the memory and runtime efficiency of existing seismic processing algorithms</li>
+                    <li>
+                      Developed code for a high-performance, parallel seismic
+                      data processing system in C++
+                    </li>
+                    <li>
+                      Designed and implemented various geophysical data
+                      processing modules
+                    </li>
+                    <li>
+                      Improved the memory and runtime efficiency of existing
+                      seismic processing algorithms
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -604,10 +674,23 @@
                     Grand Rapids, Michigan
                   </p>
                   <ul class="job-description">
-                    <li>Developed code for an open-source flight-certified operating system in C using vim</li>
-                    <li>Performed statistical analysis on the rate-of-change of open-source software</li>
-                    <li>Assisted in writing a proposal for a U.S. Navy Small Business Innovation Research grant that was awarded to DornerWorks</li>
-                    <li>Designed schematics & circuit board layouts for embedded systems using the PADS 9.3 suite</li>
+                    <li>
+                      Developed code for an open-source flight-certified
+                      operating system in C using vim
+                    </li>
+                    <li>
+                      Performed statistical analysis on the rate-of-change of
+                      open-source software
+                    </li>
+                    <li>
+                      Assisted in writing a proposal for a U.S. Navy Small
+                      Business Innovation Research grant that was awarded to
+                      DornerWorks
+                    </li>
+                    <li>
+                      Designed schematics & circuit board layouts for embedded
+                      systems using the PADS 9.3 suite
+                    </li>
                   </ul>
                 </div>
               </div>
